// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic (Node-API) 1`] = `
prisma                  : 0.0.0
@prisma/client          : 0.0.0
Current platform        : TEST_PLATFORM
Query Engine (Node-API) : libquery-engine e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node)
Migration Engine        : migration-engine-cli e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/migration-engine-TEST_PLATFORM)
Introspection Engine    : introspection-core e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/introspection-engine-TEST_PLATFORM)
Format Engine           : prisma-fmt e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/prisma-fmt-TEST_PLATFORM)
Default Engines Hash    : placeholder
Studio                  : placeholder
`;

exports[`version basic (binary) 1`] = `
prisma                : 0.0.0
@prisma/client        : 0.0.0
Current platform      : TEST_PLATFORM
Query Engine (Binary) : query-engine e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/query-engine-TEST_PLATFORM)
Migration Engine      : migration-engine-cli e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/migration-engine-TEST_PLATFORM)
Introspection Engine  : introspection-core e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/introspection-engine-TEST_PLATFORM)
Format Engine         : prisma-fmt e996df5d66a2314d1da15d31047f9777fc2fbdd9 (at sanitized_path/prisma-fmt-TEST_PLATFORM)
Default Engines Hash  : placeholder
Studio                : placeholder
`;

exports[`version with custom engines (Node-API) 1`] = `
prisma                  : 0.0.0
@prisma/client          : 0.0.0
Current platform        : TEST_PLATFORM
Query Engine (Node-API) : libquery-engine 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine        : migration-engine-cli 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/migration-engine-TEST_PLATFORM, resolved by PRISMA_MIGRATION_ENGINE_BINARY)
Introspection Engine    : introspection-core 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/introspection-engine-TEST_PLATFORM, resolved by PRISMA_INTROSPECTION_ENGINE_BINARY)
Format Engine           : prisma-fmt 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/prisma-fmt-TEST_PLATFORM, resolved by PRISMA_FMT_BINARY)
Default Engines Hash    : placeholder
Studio                  : placeholder
`;

exports[`version with custom engines (binary) 1`] = `
prisma                : 0.0.0
@prisma/client        : 0.0.0
Current platform      : TEST_PLATFORM
Query Engine (Binary) : query-engine 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/query-engine-TEST_PLATFORM, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : migration-engine-cli 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/migration-engine-TEST_PLATFORM, resolved by PRISMA_MIGRATION_ENGINE_BINARY)
Introspection Engine  : introspection-core 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/introspection-engine-TEST_PLATFORM, resolved by PRISMA_INTROSPECTION_ENGINE_BINARY)
Format Engine         : prisma-fmt 5a2e5869b69a983e279380ec68596b71beae9eff (at sanitized_path/prisma-fmt-TEST_PLATFORM, resolved by PRISMA_FMT_BINARY)
Default Engines Hash  : placeholder
Studio                : placeholder
`;
